# stepic

./: 2_6_getline.cpp  2_6_resize.cpp  2_7_2d_arr.cpp  3_3_string.cpp  3_3_string_append.cpp  3_3_string_destr.cpp  3_5_modificator.cpp  3_6_const.cpp  3_7_constructor.cpp  3_7_memory.cpp  3_7_operator.cpp  4_1_inheritance.cpp  CMakeLists.txt  example.cpp  func.cpp  get_address.cpp  getline1.cpp  main.cpp  matrixM.cpp  multiple.cpp  range.cpp  rotate.cpp  str_found.cpp  str_found1.cpp  string.cpp  string1.cpp
